// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid default 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(2,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`Grid with specified columns 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(4,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;

exports[`Grid with specified gap 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  display: grid;
  grid-gap: 2rem;
  grid-template-columns: repeat(2,minmax(0,1fr));
}

<div
  className="c0"
>
  <div>
    🥑
  </div>
  <div>
    🐛
  </div>
  <div>
    🦜
  </div>
  <div>
    🐈
  </div>
</div>
`;
